lowercase config name

--- a/nfcore_custom.config
+++ b/nfcore_custom.config
@@ -20,7 +20,7 @@ profiles {
     bigpurple      { includeConfig "${params.custom_config_base}/conf/bigpurple.config" }
     binac          { includeConfig "${params.custom_config_base}/conf/binac.config" }
     biohpc_gen     { includeConfig "${params.custom_config_base}/conf/biohpc_gen.config" }
-    BUTTER_HPC     { includeConfig "${params.custom_config_base}/conf/BUTTER_HPC.config" }
+    butter_hpc     { includeConfig "${params.custom_config_base}/conf/butter_hpc.config" }
     cambridge      { includeConfig "${params.custom_config_base}/conf/cambridge.config" }
     cbe            { includeConfig "${params.custom_config_base}/conf/cbe.config" }
     ccga_dx        { includeConfig "${params.custom_config_base}/conf/ccga_dx.config" }
