Update main.yml for fli_hpc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,6 @@ jobs:
           - "bigpurple"
           - "binac"
           - "biohpc_gen"
-          - "butter_hpc"
           - "cambridge"
           - "cbe"
           - "ccga_dx"
@@ -60,6 +59,7 @@ jobs:
           - "engaging"
           - "eva"
           - "fgcz"
+          - "fli_hpc"
           - "genotoul"
           - "genouest"
           - "gis"
