Update and rename butter_hpc.config to fli_hpc.config

--- a/conf/fli_hpc.config
+++ b/conf/fli_hpc.config
@@ -1,9 +1,9 @@
 
 
 params {
-  config_profile_description = 'butter_hpc cluster profile provided by nf-core/configs.'
+  config_profile_description = 'Friedrich-Loeffler-Institut (FLI) HPC cluster profile provided by nf-core/configs'
   config_profile_contact = 'Michal Levin (MichaldotLevin)'
-  config_profile_url = 'test'
+  config_profile_url = 'https://www.fli.de/de/startseite'
   max_memory = 1536.GB
   max_cpus = 36
   max_time = 5.d
